--- a/src/components/ProductForm/ProductForm.scss
+++ b/src/components/ProductForm/ProductForm.scss
@@ -16,6 +16,7 @@
   animation: fadeIn 0.2s ease-in-out;
   display: flex;
   flex-direction: column;
+  border: 1px solid rgba(255, 255, 255, 0.4);
 
   .close-btn {
     margin-left: auto;
@@ -26,13 +27,17 @@
     text-align: left;
   }
 
-  input {
+  input, textarea {
     width: 95%;
     padding: 1rem;
     margin-bottom: .5rem;
     border-radius: .8rem;
     border: 1px solid #fff;
     font-size: .9rem;
+  }
+
+  textarea {
+    height: 8rem;
   }
 
   .btn-container {
